fix: hide overflow y

--- a/src/custom.less
+++ b/src/custom.less
@@ -29,6 +29,7 @@ body {
   background-color: @background-color-base;
   font-weight: 400;
   color: #1a1f36;
+  overflow-y: hidden;
 }
 
 // Layout
